manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio
  labels:
    app: portfolio-website
spec:
  type: ClusterIP
  selector:
    app: portfolio-website
  ports:
    - name: http
      port: 80
      targetPort: http
